parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ADD
    ELSE
    FOR
    LDQMARK
    PUNTO
    RDQMARK
    SQMARK
    WHILE

Grammar

Rule 0     S' -> cuerpo
Rule 1     cuerpo -> asignacion
Rule 2     cuerpo -> expresion
Rule 3     cuerpo -> comparacion
Rule 4     cuerpo -> sentenciaif
Rule 5     cuerpo -> funciones
Rule 6     funciones -> declararFunc
Rule 7     funciones -> usarFunc
Rule 8     declararFunc -> VOID ID LPAREN RPAREN LBRACE cuerpo RBRACE
Rule 9     usarFunc -> PRINT LPAREN STRINGVAL RPAREN SEMICOLON
Rule 10    sentenciaif -> IF LPAREN comparacion RPAREN COLON cuerpo
Rule 11    asignacion -> asignacionNumerica
Rule 12    asignacion -> asignacionString
Rule 13    asignacion -> asignacionBoolean
Rule 14    asignacion -> asignacionEstructuraDatos
Rule 15    asignacionEstructuraDatos -> asignacionList
Rule 16    asignacionEstructuraDatos -> asignacionSet
Rule 17    asignacionEstructuraDatos -> asignacionMap
Rule 18    asignacionList -> LIST LESSTHAN tipoPrimitivo MORETHAN ID SEMICOLON
Rule 19    asignacionSet -> SET ID ASSIGN NEW SET LPAREN RPAREN SEMICOLON
Rule 20    asignacionMap -> MAP LESSTHAN tipoPrimitivo COMMA tipoPrimitivo MORETHAN ID SEMICOLON
Rule 21    asignacionBoolean -> BOOL ID ASSIGN expresionBoolean SEMICOLON
Rule 22    asignacionNumerica -> tipoNumeric ID ASSIGN expresion SEMICOLON
Rule 23    asignacionString -> tipoString ID ASSIGN expresionString SEMICOLON
Rule 24    expresion -> valor
Rule 25    expresionString -> STRINGVAL
Rule 26    comparacion -> valor operadoresComp expresion
Rule 27    expresion -> valor operadoresMat expresion
Rule 28    expresionBoolean -> TRUE
Rule 29    expresionBoolean -> FALSE
Rule 30    operadoresMat -> MINUS
Rule 31    operadoresMat -> PLUS
Rule 32    operadoresMat -> TIMES
Rule 33    operadoresMat -> DIVIDE
Rule 34    operadoresComp -> MORETHAN
Rule 35    operadoresComp -> LESSTHAN
Rule 36    operadoresComp -> GQUAL
Rule 37    operadoresComp -> LQUAL
Rule 38    operadoresComp -> NOTEQUALS
Rule 39    operadoresComp -> EQUALS
Rule 40    valor -> NUMBER
Rule 41    valor -> ID
Rule 42    tipoPrimitivo -> tipoNumeric
Rule 43    tipoPrimitivo -> tipoString
Rule 44    tipoNumeric -> NUM
Rule 45    tipoNumeric -> INT
Rule 46    tipoNumeric -> DOUBLE
Rule 47    tipoString -> STRING
Rule 48    tipoString -> VAR
Rule 49    tipoString -> DYNAMIC

Terminals, with rules where they appear

ADD                  : 
ASSIGN               : 19 21 22 23
BOOL                 : 21
COLON                : 10
COMMA                : 20
DIVIDE               : 33
DOUBLE               : 46
DYNAMIC              : 49
ELSE                 : 
EQUALS               : 39
FALSE                : 29
FOR                  : 
GQUAL                : 36
ID                   : 8 18 19 20 21 22 23 41
IF                   : 10
INT                  : 45
LBRACE               : 8
LDQMARK              : 
LESSTHAN             : 18 20 35
LIST                 : 18
LPAREN               : 8 9 10 19
LQUAL                : 37
MAP                  : 20
MINUS                : 30
MORETHAN             : 18 20 34
NEW                  : 19
NOTEQUALS            : 38
NUM                  : 44
NUMBER               : 40
PLUS                 : 31
PRINT                : 9
PUNTO                : 
RBRACE               : 8
RDQMARK              : 
RPAREN               : 8 9 10 19
SEMICOLON            : 9 18 19 20 21 22 23
SET                  : 19 19
SQMARK               : 
STRING               : 47
STRINGVAL            : 9 25
TIMES                : 32
TRUE                 : 28
VAR                  : 48
VOID                 : 8
WHILE                : 
error                : 

Nonterminals, with rules where they appear

asignacion           : 1
asignacionBoolean    : 13
asignacionEstructuraDatos : 14
asignacionList       : 15
asignacionMap        : 17
asignacionNumerica   : 11
asignacionSet        : 16
asignacionString     : 12
comparacion          : 3 10
cuerpo               : 8 10 0
declararFunc         : 6
expresion            : 2 22 26 27
expresionBoolean     : 21
expresionString      : 23
funciones            : 5
operadoresComp       : 26
operadoresMat        : 27
sentenciaif          : 4
tipoNumeric          : 22 42
tipoPrimitivo        : 18 20 20
tipoString           : 23 43
usarFunc             : 7
valor                : 24 26 27

Parsing method: LALR

state 0

    (0) S' -> . cuerpo
    (1) cuerpo -> . asignacion
    (2) cuerpo -> . expresion
    (3) cuerpo -> . comparacion
    (4) cuerpo -> . sentenciaif
    (5) cuerpo -> . funciones
    (11) asignacion -> . asignacionNumerica
    (12) asignacion -> . asignacionString
    (13) asignacion -> . asignacionBoolean
    (14) asignacion -> . asignacionEstructuraDatos
    (24) expresion -> . valor
    (27) expresion -> . valor operadoresMat expresion
    (26) comparacion -> . valor operadoresComp expresion
    (10) sentenciaif -> . IF LPAREN comparacion RPAREN COLON cuerpo
    (6) funciones -> . declararFunc
    (7) funciones -> . usarFunc
    (22) asignacionNumerica -> . tipoNumeric ID ASSIGN expresion SEMICOLON
    (23) asignacionString -> . tipoString ID ASSIGN expresionString SEMICOLON
    (21) asignacionBoolean -> . BOOL ID ASSIGN expresionBoolean SEMICOLON
    (15) asignacionEstructuraDatos -> . asignacionList
    (16) asignacionEstructuraDatos -> . asignacionSet
    (17) asignacionEstructuraDatos -> . asignacionMap
    (40) valor -> . NUMBER
    (41) valor -> . ID
    (8) declararFunc -> . VOID ID LPAREN RPAREN LBRACE cuerpo RBRACE
    (9) usarFunc -> . PRINT LPAREN STRINGVAL RPAREN SEMICOLON
    (44) tipoNumeric -> . NUM
    (45) tipoNumeric -> . INT
    (46) tipoNumeric -> . DOUBLE
    (47) tipoString -> . STRING
    (48) tipoString -> . VAR
    (49) tipoString -> . DYNAMIC
    (18) asignacionList -> . LIST LESSTHAN tipoPrimitivo MORETHAN ID SEMICOLON
    (19) asignacionSet -> . SET ID ASSIGN NEW SET LPAREN RPAREN SEMICOLON
    (20) asignacionMap -> . MAP LESSTHAN tipoPrimitivo COMMA tipoPrimitivo MORETHAN ID SEMICOLON

    IF              shift and go to state 12
    BOOL            shift and go to state 18
    NUMBER          shift and go to state 22
    ID              shift and go to state 16
    VOID            shift and go to state 23
    PRINT           shift and go to state 24
    NUM             shift and go to state 25
    INT             shift and go to state 26
    DOUBLE          shift and go to state 27
    STRING          shift and go to state 28
    VAR             shift and go to state 29
    DYNAMIC         shift and go to state 30
    LIST            shift and go to state 31
    SET             shift and go to state 32
    MAP             shift and go to state 33

    cuerpo                         shift and go to state 1
    asignacion                     shift and go to state 2
    expresion                      shift and go to state 3
    comparacion                    shift and go to state 4
    sentenciaif                    shift and go to state 5
    funciones                      shift and go to state 6
    asignacionNumerica             shift and go to state 7
    asignacionString               shift and go to state 8
    asignacionBoolean              shift and go to state 9
    asignacionEstructuraDatos      shift and go to state 10
    valor                          shift and go to state 11
    declararFunc                   shift and go to state 13
    usarFunc                       shift and go to state 14
    tipoNumeric                    shift and go to state 15
    tipoString                     shift and go to state 17
    asignacionList                 shift and go to state 19
    asignacionSet                  shift and go to state 20
    asignacionMap                  shift and go to state 21

state 1

    (0) S' -> cuerpo .



state 2

    (1) cuerpo -> asignacion .

    $end            reduce using rule 1 (cuerpo -> asignacion .)
    RBRACE          reduce using rule 1 (cuerpo -> asignacion .)


state 3

    (2) cuerpo -> expresion .

    $end            reduce using rule 2 (cuerpo -> expresion .)
    RBRACE          reduce using rule 2 (cuerpo -> expresion .)


state 4

    (3) cuerpo -> comparacion .

    $end            reduce using rule 3 (cuerpo -> comparacion .)
    RBRACE          reduce using rule 3 (cuerpo -> comparacion .)


state 5

    (4) cuerpo -> sentenciaif .

    $end            reduce using rule 4 (cuerpo -> sentenciaif .)
    RBRACE          reduce using rule 4 (cuerpo -> sentenciaif .)


state 6

    (5) cuerpo -> funciones .

    $end            reduce using rule 5 (cuerpo -> funciones .)
    RBRACE          reduce using rule 5 (cuerpo -> funciones .)


state 7

    (11) asignacion -> asignacionNumerica .

    $end            reduce using rule 11 (asignacion -> asignacionNumerica .)
    RBRACE          reduce using rule 11 (asignacion -> asignacionNumerica .)


state 8

    (12) asignacion -> asignacionString .

    $end            reduce using rule 12 (asignacion -> asignacionString .)
    RBRACE          reduce using rule 12 (asignacion -> asignacionString .)


state 9

    (13) asignacion -> asignacionBoolean .

    $end            reduce using rule 13 (asignacion -> asignacionBoolean .)
    RBRACE          reduce using rule 13 (asignacion -> asignacionBoolean .)


state 10

    (14) asignacion -> asignacionEstructuraDatos .

    $end            reduce using rule 14 (asignacion -> asignacionEstructuraDatos .)
    RBRACE          reduce using rule 14 (asignacion -> asignacionEstructuraDatos .)


state 11

    (24) expresion -> valor .
    (27) expresion -> valor . operadoresMat expresion
    (26) comparacion -> valor . operadoresComp expresion
    (30) operadoresMat -> . MINUS
    (31) operadoresMat -> . PLUS
    (32) operadoresMat -> . TIMES
    (33) operadoresMat -> . DIVIDE
    (34) operadoresComp -> . MORETHAN
    (35) operadoresComp -> . LESSTHAN
    (36) operadoresComp -> . GQUAL
    (37) operadoresComp -> . LQUAL
    (38) operadoresComp -> . NOTEQUALS
    (39) operadoresComp -> . EQUALS

    $end            reduce using rule 24 (expresion -> valor .)
    RBRACE          reduce using rule 24 (expresion -> valor .)
    MINUS           shift and go to state 36
    PLUS            shift and go to state 37
    TIMES           shift and go to state 38
    DIVIDE          shift and go to state 39
    MORETHAN        shift and go to state 40
    LESSTHAN        shift and go to state 41
    GQUAL           shift and go to state 42
    LQUAL           shift and go to state 43
    NOTEQUALS       shift and go to state 44
    EQUALS          shift and go to state 45

    operadoresMat                  shift and go to state 34
    operadoresComp                 shift and go to state 35

state 12

    (10) sentenciaif -> IF . LPAREN comparacion RPAREN COLON cuerpo

    LPAREN          shift and go to state 46


state 13

    (6) funciones -> declararFunc .

    $end            reduce using rule 6 (funciones -> declararFunc .)
    RBRACE          reduce using rule 6 (funciones -> declararFunc .)


state 14

    (7) funciones -> usarFunc .

    $end            reduce using rule 7 (funciones -> usarFunc .)
    RBRACE          reduce using rule 7 (funciones -> usarFunc .)


state 15

    (22) asignacionNumerica -> tipoNumeric . ID ASSIGN expresion SEMICOLON

    ID              shift and go to state 47


state 16

    (41) valor -> ID .

    MINUS           reduce using rule 41 (valor -> ID .)
    PLUS            reduce using rule 41 (valor -> ID .)
    TIMES           reduce using rule 41 (valor -> ID .)
    DIVIDE          reduce using rule 41 (valor -> ID .)
    MORETHAN        reduce using rule 41 (valor -> ID .)
    LESSTHAN        reduce using rule 41 (valor -> ID .)
    GQUAL           reduce using rule 41 (valor -> ID .)
    LQUAL           reduce using rule 41 (valor -> ID .)
    NOTEQUALS       reduce using rule 41 (valor -> ID .)
    EQUALS          reduce using rule 41 (valor -> ID .)
    $end            reduce using rule 41 (valor -> ID .)
    RPAREN          reduce using rule 41 (valor -> ID .)
    RBRACE          reduce using rule 41 (valor -> ID .)
    SEMICOLON       reduce using rule 41 (valor -> ID .)


state 17

    (23) asignacionString -> tipoString . ID ASSIGN expresionString SEMICOLON

    ID              shift and go to state 48


state 18

    (21) asignacionBoolean -> BOOL . ID ASSIGN expresionBoolean SEMICOLON

    ID              shift and go to state 49


state 19

    (15) asignacionEstructuraDatos -> asignacionList .

    $end            reduce using rule 15 (asignacionEstructuraDatos -> asignacionList .)
    RBRACE          reduce using rule 15 (asignacionEstructuraDatos -> asignacionList .)


state 20

    (16) asignacionEstructuraDatos -> asignacionSet .

    $end            reduce using rule 16 (asignacionEstructuraDatos -> asignacionSet .)
    RBRACE          reduce using rule 16 (asignacionEstructuraDatos -> asignacionSet .)


state 21

    (17) asignacionEstructuraDatos -> asignacionMap .

    $end            reduce using rule 17 (asignacionEstructuraDatos -> asignacionMap .)
    RBRACE          reduce using rule 17 (asignacionEstructuraDatos -> asignacionMap .)


state 22

    (40) valor -> NUMBER .

    MINUS           reduce using rule 40 (valor -> NUMBER .)
    PLUS            reduce using rule 40 (valor -> NUMBER .)
    TIMES           reduce using rule 40 (valor -> NUMBER .)
    DIVIDE          reduce using rule 40 (valor -> NUMBER .)
    MORETHAN        reduce using rule 40 (valor -> NUMBER .)
    LESSTHAN        reduce using rule 40 (valor -> NUMBER .)
    GQUAL           reduce using rule 40 (valor -> NUMBER .)
    LQUAL           reduce using rule 40 (valor -> NUMBER .)
    NOTEQUALS       reduce using rule 40 (valor -> NUMBER .)
    EQUALS          reduce using rule 40 (valor -> NUMBER .)
    $end            reduce using rule 40 (valor -> NUMBER .)
    RPAREN          reduce using rule 40 (valor -> NUMBER .)
    RBRACE          reduce using rule 40 (valor -> NUMBER .)
    SEMICOLON       reduce using rule 40 (valor -> NUMBER .)


state 23

    (8) declararFunc -> VOID . ID LPAREN RPAREN LBRACE cuerpo RBRACE

    ID              shift and go to state 50


state 24

    (9) usarFunc -> PRINT . LPAREN STRINGVAL RPAREN SEMICOLON

    LPAREN          shift and go to state 51


state 25

    (44) tipoNumeric -> NUM .

    ID              reduce using rule 44 (tipoNumeric -> NUM .)
    MORETHAN        reduce using rule 44 (tipoNumeric -> NUM .)
    COMMA           reduce using rule 44 (tipoNumeric -> NUM .)


state 26

    (45) tipoNumeric -> INT .

    ID              reduce using rule 45 (tipoNumeric -> INT .)
    MORETHAN        reduce using rule 45 (tipoNumeric -> INT .)
    COMMA           reduce using rule 45 (tipoNumeric -> INT .)


state 27

    (46) tipoNumeric -> DOUBLE .

    ID              reduce using rule 46 (tipoNumeric -> DOUBLE .)
    MORETHAN        reduce using rule 46 (tipoNumeric -> DOUBLE .)
    COMMA           reduce using rule 46 (tipoNumeric -> DOUBLE .)


state 28

    (47) tipoString -> STRING .

    ID              reduce using rule 47 (tipoString -> STRING .)
    MORETHAN        reduce using rule 47 (tipoString -> STRING .)
    COMMA           reduce using rule 47 (tipoString -> STRING .)


state 29

    (48) tipoString -> VAR .

    ID              reduce using rule 48 (tipoString -> VAR .)
    MORETHAN        reduce using rule 48 (tipoString -> VAR .)
    COMMA           reduce using rule 48 (tipoString -> VAR .)


state 30

    (49) tipoString -> DYNAMIC .

    ID              reduce using rule 49 (tipoString -> DYNAMIC .)
    MORETHAN        reduce using rule 49 (tipoString -> DYNAMIC .)
    COMMA           reduce using rule 49 (tipoString -> DYNAMIC .)


state 31

    (18) asignacionList -> LIST . LESSTHAN tipoPrimitivo MORETHAN ID SEMICOLON

    LESSTHAN        shift and go to state 52


state 32

    (19) asignacionSet -> SET . ID ASSIGN NEW SET LPAREN RPAREN SEMICOLON

    ID              shift and go to state 53


state 33

    (20) asignacionMap -> MAP . LESSTHAN tipoPrimitivo COMMA tipoPrimitivo MORETHAN ID SEMICOLON

    LESSTHAN        shift and go to state 54


state 34

    (27) expresion -> valor operadoresMat . expresion
    (24) expresion -> . valor
    (27) expresion -> . valor operadoresMat expresion
    (40) valor -> . NUMBER
    (41) valor -> . ID

    NUMBER          shift and go to state 22
    ID              shift and go to state 16

    valor                          shift and go to state 55
    expresion                      shift and go to state 56

state 35

    (26) comparacion -> valor operadoresComp . expresion
    (24) expresion -> . valor
    (27) expresion -> . valor operadoresMat expresion
    (40) valor -> . NUMBER
    (41) valor -> . ID

    NUMBER          shift and go to state 22
    ID              shift and go to state 16

    valor                          shift and go to state 55
    expresion                      shift and go to state 57

state 36

    (30) operadoresMat -> MINUS .

    NUMBER          reduce using rule 30 (operadoresMat -> MINUS .)
    ID              reduce using rule 30 (operadoresMat -> MINUS .)


state 37

    (31) operadoresMat -> PLUS .

    NUMBER          reduce using rule 31 (operadoresMat -> PLUS .)
    ID              reduce using rule 31 (operadoresMat -> PLUS .)


state 38

    (32) operadoresMat -> TIMES .

    NUMBER          reduce using rule 32 (operadoresMat -> TIMES .)
    ID              reduce using rule 32 (operadoresMat -> TIMES .)


state 39

    (33) operadoresMat -> DIVIDE .

    NUMBER          reduce using rule 33 (operadoresMat -> DIVIDE .)
    ID              reduce using rule 33 (operadoresMat -> DIVIDE .)


state 40

    (34) operadoresComp -> MORETHAN .

    NUMBER          reduce using rule 34 (operadoresComp -> MORETHAN .)
    ID              reduce using rule 34 (operadoresComp -> MORETHAN .)


state 41

    (35) operadoresComp -> LESSTHAN .

    NUMBER          reduce using rule 35 (operadoresComp -> LESSTHAN .)
    ID              reduce using rule 35 (operadoresComp -> LESSTHAN .)


state 42

    (36) operadoresComp -> GQUAL .

    NUMBER          reduce using rule 36 (operadoresComp -> GQUAL .)
    ID              reduce using rule 36 (operadoresComp -> GQUAL .)


state 43

    (37) operadoresComp -> LQUAL .

    NUMBER          reduce using rule 37 (operadoresComp -> LQUAL .)
    ID              reduce using rule 37 (operadoresComp -> LQUAL .)


state 44

    (38) operadoresComp -> NOTEQUALS .

    NUMBER          reduce using rule 38 (operadoresComp -> NOTEQUALS .)
    ID              reduce using rule 38 (operadoresComp -> NOTEQUALS .)


state 45

    (39) operadoresComp -> EQUALS .

    NUMBER          reduce using rule 39 (operadoresComp -> EQUALS .)
    ID              reduce using rule 39 (operadoresComp -> EQUALS .)


state 46

    (10) sentenciaif -> IF LPAREN . comparacion RPAREN COLON cuerpo
    (26) comparacion -> . valor operadoresComp expresion
    (40) valor -> . NUMBER
    (41) valor -> . ID

    NUMBER          shift and go to state 22
    ID              shift and go to state 16

    comparacion                    shift and go to state 58
    valor                          shift and go to state 59

state 47

    (22) asignacionNumerica -> tipoNumeric ID . ASSIGN expresion SEMICOLON

    ASSIGN          shift and go to state 60


state 48

    (23) asignacionString -> tipoString ID . ASSIGN expresionString SEMICOLON

    ASSIGN          shift and go to state 61


state 49

    (21) asignacionBoolean -> BOOL ID . ASSIGN expresionBoolean SEMICOLON

    ASSIGN          shift and go to state 62


state 50

    (8) declararFunc -> VOID ID . LPAREN RPAREN LBRACE cuerpo RBRACE

    LPAREN          shift and go to state 63


state 51

    (9) usarFunc -> PRINT LPAREN . STRINGVAL RPAREN SEMICOLON

    STRINGVAL       shift and go to state 64


state 52

    (18) asignacionList -> LIST LESSTHAN . tipoPrimitivo MORETHAN ID SEMICOLON
    (42) tipoPrimitivo -> . tipoNumeric
    (43) tipoPrimitivo -> . tipoString
    (44) tipoNumeric -> . NUM
    (45) tipoNumeric -> . INT
    (46) tipoNumeric -> . DOUBLE
    (47) tipoString -> . STRING
    (48) tipoString -> . VAR
    (49) tipoString -> . DYNAMIC

    NUM             shift and go to state 25
    INT             shift and go to state 26
    DOUBLE          shift and go to state 27
    STRING          shift and go to state 28
    VAR             shift and go to state 29
    DYNAMIC         shift and go to state 30

    tipoPrimitivo                  shift and go to state 65
    tipoNumeric                    shift and go to state 66
    tipoString                     shift and go to state 67

state 53

    (19) asignacionSet -> SET ID . ASSIGN NEW SET LPAREN RPAREN SEMICOLON

    ASSIGN          shift and go to state 68


state 54

    (20) asignacionMap -> MAP LESSTHAN . tipoPrimitivo COMMA tipoPrimitivo MORETHAN ID SEMICOLON
    (42) tipoPrimitivo -> . tipoNumeric
    (43) tipoPrimitivo -> . tipoString
    (44) tipoNumeric -> . NUM
    (45) tipoNumeric -> . INT
    (46) tipoNumeric -> . DOUBLE
    (47) tipoString -> . STRING
    (48) tipoString -> . VAR
    (49) tipoString -> . DYNAMIC

    NUM             shift and go to state 25
    INT             shift and go to state 26
    DOUBLE          shift and go to state 27
    STRING          shift and go to state 28
    VAR             shift and go to state 29
    DYNAMIC         shift and go to state 30

    tipoPrimitivo                  shift and go to state 69
    tipoNumeric                    shift and go to state 66
    tipoString                     shift and go to state 67

state 55

    (24) expresion -> valor .
    (27) expresion -> valor . operadoresMat expresion
    (30) operadoresMat -> . MINUS
    (31) operadoresMat -> . PLUS
    (32) operadoresMat -> . TIMES
    (33) operadoresMat -> . DIVIDE

    $end            reduce using rule 24 (expresion -> valor .)
    RPAREN          reduce using rule 24 (expresion -> valor .)
    RBRACE          reduce using rule 24 (expresion -> valor .)
    SEMICOLON       reduce using rule 24 (expresion -> valor .)
    MINUS           shift and go to state 36
    PLUS            shift and go to state 37
    TIMES           shift and go to state 38
    DIVIDE          shift and go to state 39

    operadoresMat                  shift and go to state 34

state 56

    (27) expresion -> valor operadoresMat expresion .

    $end            reduce using rule 27 (expresion -> valor operadoresMat expresion .)
    RPAREN          reduce using rule 27 (expresion -> valor operadoresMat expresion .)
    RBRACE          reduce using rule 27 (expresion -> valor operadoresMat expresion .)
    SEMICOLON       reduce using rule 27 (expresion -> valor operadoresMat expresion .)


state 57

    (26) comparacion -> valor operadoresComp expresion .

    $end            reduce using rule 26 (comparacion -> valor operadoresComp expresion .)
    RPAREN          reduce using rule 26 (comparacion -> valor operadoresComp expresion .)
    RBRACE          reduce using rule 26 (comparacion -> valor operadoresComp expresion .)


state 58

    (10) sentenciaif -> IF LPAREN comparacion . RPAREN COLON cuerpo

    RPAREN          shift and go to state 70


state 59

    (26) comparacion -> valor . operadoresComp expresion
    (34) operadoresComp -> . MORETHAN
    (35) operadoresComp -> . LESSTHAN
    (36) operadoresComp -> . GQUAL
    (37) operadoresComp -> . LQUAL
    (38) operadoresComp -> . NOTEQUALS
    (39) operadoresComp -> . EQUALS

    MORETHAN        shift and go to state 40
    LESSTHAN        shift and go to state 41
    GQUAL           shift and go to state 42
    LQUAL           shift and go to state 43
    NOTEQUALS       shift and go to state 44
    EQUALS          shift and go to state 45

    operadoresComp                 shift and go to state 35

state 60

    (22) asignacionNumerica -> tipoNumeric ID ASSIGN . expresion SEMICOLON
    (24) expresion -> . valor
    (27) expresion -> . valor operadoresMat expresion
    (40) valor -> . NUMBER
    (41) valor -> . ID

    NUMBER          shift and go to state 22
    ID              shift and go to state 16

    expresion                      shift and go to state 71
    valor                          shift and go to state 55

state 61

    (23) asignacionString -> tipoString ID ASSIGN . expresionString SEMICOLON
    (25) expresionString -> . STRINGVAL

    STRINGVAL       shift and go to state 73

    expresionString                shift and go to state 72

state 62

    (21) asignacionBoolean -> BOOL ID ASSIGN . expresionBoolean SEMICOLON
    (28) expresionBoolean -> . TRUE
    (29) expresionBoolean -> . FALSE

    TRUE            shift and go to state 75
    FALSE           shift and go to state 76

    expresionBoolean               shift and go to state 74

state 63

    (8) declararFunc -> VOID ID LPAREN . RPAREN LBRACE cuerpo RBRACE

    RPAREN          shift and go to state 77


state 64

    (9) usarFunc -> PRINT LPAREN STRINGVAL . RPAREN SEMICOLON

    RPAREN          shift and go to state 78


state 65

    (18) asignacionList -> LIST LESSTHAN tipoPrimitivo . MORETHAN ID SEMICOLON

    MORETHAN        shift and go to state 79


state 66

    (42) tipoPrimitivo -> tipoNumeric .

    MORETHAN        reduce using rule 42 (tipoPrimitivo -> tipoNumeric .)
    COMMA           reduce using rule 42 (tipoPrimitivo -> tipoNumeric .)


state 67

    (43) tipoPrimitivo -> tipoString .

    MORETHAN        reduce using rule 43 (tipoPrimitivo -> tipoString .)
    COMMA           reduce using rule 43 (tipoPrimitivo -> tipoString .)


state 68

    (19) asignacionSet -> SET ID ASSIGN . NEW SET LPAREN RPAREN SEMICOLON

    NEW             shift and go to state 80


state 69

    (20) asignacionMap -> MAP LESSTHAN tipoPrimitivo . COMMA tipoPrimitivo MORETHAN ID SEMICOLON

    COMMA           shift and go to state 81


state 70

    (10) sentenciaif -> IF LPAREN comparacion RPAREN . COLON cuerpo

    COLON           shift and go to state 82


state 71

    (22) asignacionNumerica -> tipoNumeric ID ASSIGN expresion . SEMICOLON

    SEMICOLON       shift and go to state 83


state 72

    (23) asignacionString -> tipoString ID ASSIGN expresionString . SEMICOLON

    SEMICOLON       shift and go to state 84


state 73

    (25) expresionString -> STRINGVAL .

    SEMICOLON       reduce using rule 25 (expresionString -> STRINGVAL .)


state 74

    (21) asignacionBoolean -> BOOL ID ASSIGN expresionBoolean . SEMICOLON

    SEMICOLON       shift and go to state 85


state 75

    (28) expresionBoolean -> TRUE .

    SEMICOLON       reduce using rule 28 (expresionBoolean -> TRUE .)


state 76

    (29) expresionBoolean -> FALSE .

    SEMICOLON       reduce using rule 29 (expresionBoolean -> FALSE .)


state 77

    (8) declararFunc -> VOID ID LPAREN RPAREN . LBRACE cuerpo RBRACE

    LBRACE          shift and go to state 86


state 78

    (9) usarFunc -> PRINT LPAREN STRINGVAL RPAREN . SEMICOLON

    SEMICOLON       shift and go to state 87


state 79

    (18) asignacionList -> LIST LESSTHAN tipoPrimitivo MORETHAN . ID SEMICOLON

    ID              shift and go to state 88


state 80

    (19) asignacionSet -> SET ID ASSIGN NEW . SET LPAREN RPAREN SEMICOLON

    SET             shift and go to state 89


state 81

    (20) asignacionMap -> MAP LESSTHAN tipoPrimitivo COMMA . tipoPrimitivo MORETHAN ID SEMICOLON
    (42) tipoPrimitivo -> . tipoNumeric
    (43) tipoPrimitivo -> . tipoString
    (44) tipoNumeric -> . NUM
    (45) tipoNumeric -> . INT
    (46) tipoNumeric -> . DOUBLE
    (47) tipoString -> . STRING
    (48) tipoString -> . VAR
    (49) tipoString -> . DYNAMIC

    NUM             shift and go to state 25
    INT             shift and go to state 26
    DOUBLE          shift and go to state 27
    STRING          shift and go to state 28
    VAR             shift and go to state 29
    DYNAMIC         shift and go to state 30
